test_programs/compile_failure/noirc_frontend_tests_traits_trait_inheritance_dependency_cycle/src/main.nr

        trait Foo: Bar {}
        trait Bar: Foo {}
        fn main() {}
    